--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
+    "react-shimmer-effects": "^1.0.4",
+    "react-spinners": "^0.15.0",
+    "shimmer-effects-react": "^1.0.4",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
